--- a/src/sections/AboutSection/AboutSection.scss
+++ b/src/sections/AboutSection/AboutSection.scss
@@ -8,8 +8,8 @@
 
         svg {
             margin-left: 1rem;
-            width: 1.5rem;
-            height: 1.5rem;
+            width: 3rem;
+            height: 3rem;
 
             &:first-child {
                 margin-left: 0;
