--- a/src/sections/CustomSections/CustomSections.scss
+++ b/src/sections/CustomSections/CustomSections.scss
@@ -7,9 +7,9 @@
     .programming-icons {
 
         svg {
-            margin-left: 1rem;
-            width: 1.5rem;
-            height: 1.5rem;
+            margin-left: 2rem;
+            width: 3.5rem;
+            height: 3.5rem;
 
             &:first-child {
                 margin-left: 0;
